--- a/.travis.yml
+++ b/.travis.yml
@@ -7,30 +7,30 @@ env:
   - REVISION="01"
   - PATH=/opt/rakudo-pkg/bin:$PATH
   - RAKUDO_DEB="https://github.com/nxadm/rakudo-pkg/releases/download/v2017.11/rakudo-pkg-Ubuntu14.04_2017.11-01_amd64.deb"
+
   matrix:
-  - OS=alpine ARCH=amd64 VERSION=3.6
-  - OS=centos ARCH=amd64 VERSION=7
-  - OS=debian ARCH=amd64 VERSION=8
-  - OS=debian ARCH=amd64 VERSION=9
-  - OS=fedora ARCH=amd64 VERSION=25
-  - OS=fedora ARCH=amd64 VERSION=26
-  - OS=fedora ARCH=amd64 VERSION=27
-  - OS=ubuntu ARCH=amd64 VERSION=14.04
-  - OS=ubuntu ARCH=amd64 VERSION=16.04
-  - OS=ubuntu ARCH=amd64 VERSION=17.04
-  - OS=ubuntu ARCH=amd64 VERSION=17.10
-  - OS=ubuntu ARCH=amd64 VERSION=14.04
-  - OS=ubuntu ARCH=i386 VERSION=16.04
-  - OS=ubuntu ARCH=i386 VERSION=17.04
-  - OS=ubuntu ARCH=i386 VERSION=17.10
+#  - OS=alpine ARCH=amd64 VERSION=3.6
+#  - OS=centos ARCH=amd64 VERSION=7
+#  - OS=debian ARCH=amd64 VERSION=8
+#  - OS=debian ARCH=amd64 VERSION=9
+#  - OS=fedora ARCH=amd64 VERSION=25
+#  - OS=fedora ARCH=amd64 VERSION=26
+#  - OS=fedora ARCH=amd64 VERSION=27
+#  - OS=ubuntu ARCH=amd64 VERSION=14.04
+#  - OS=ubuntu ARCH=amd64 VERSION=14.04
+#  - OS=ubuntu ARCH=amd64 VERSION=16.04
+#  - OS=ubuntu ARCH=amd64 VERSION=17.04
+#  - OS=ubuntu ARCH=amd64 VERSION=17.10
+  - OS=ubuntu ARCH=arm VERSION=16.04
+#  - OS=ubuntu ARCH=i386 VERSION=16.04
+#  - OS=ubuntu ARCH=i386 VERSION=17.04
+#  - OS=ubuntu ARCH=i386 VERSION=17.10
 sudo: required
 services:
 - docker
 install: wget $RAKUDO_DEB && sudo dpkg -i *.deb
 script:
-- bin/create-img.p6 docker/Dockerfile-${OS}-${ARCH}-${VERSION} && bin/create-pkg.p6
-  rakudo-pkg/$OS-$ARCH:$VERSION --rakudo-version=$RAKUDO_VERSION --nqp-version=$NQP_VERSION
-  --moarvm-version=$MOARVM_VERSION --rev=$REVISION
+- bin/create-img.p6 docker/Dockerfile-${OS}-${ARCH}-${VERSION} && bin/create-pkg.p6 rakudo-pkg/$OS-$ARCH:$VERSION --rakudo-version=$RAKUDO_VERSION --nqp-version=$NQP_VERSION --moarvm-version=$MOARVM_VERSION --rev=$REVISION
 deploy:
   provider: releases
   prerelease: true
